puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Offers.Manager/content/Views/Offers/Header.cshtml.pp
<div class="span6">
  <h1>
    @ViewBag.Section
  </h1>
</div>
<div class="span6">
  <div class="btn-group pull-right">
    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
      <i class="icon-cog"></i>
      Settings <span class="caret"></span>
    </a>
    <ul class="dropdown-menu">
      <li>
        <a href="#">
          <i class="icon-user"></i>Permissions
        </a>
      </li>
    </ul>
  </div>
</div>
